# JureApplication

./: .gitignore  README.md  pyproject.toml
src/task_extractor/: __init__.py  __main__.py  cli.py  discovery.py  io.py  linker.py  llm.py  models.py  notebook.py  snippet.py
src/task_extractor/config/: __init__.py  settings.py
src/tool_extractor/: README.md  __init__.py  cli.py  extractor.py  filesystem.py  models.py
